markers are working but i have an issue with data from the .py file properly working with my multiple marker function see test.html for example

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
  <html>
+
   <head>
     <meta charset="utf-8">
     <title>Tralennial: The travel site for Millenails</title>
+    <script src ="//code.jquery.com/jquery-1.12.0.min.js"></script>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWvuV9bMA9iUGNCqqWdgKu4vuAfmlNAUk&callback=initMap"></script>
   </head>
     <div class="container">
       {% include 'includes/_navbar.html' %}
@@ -12,8 +17,10 @@
          {% endblock %}
       </div>
 
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
-      </script>
+
+
+
+
     </div>
   </html>
