--- a/templates/map.html
+++ b/templates/map.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 {% extends "layout.html" %}
 {% block content %}
-<script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWvuV9bMA9iUGNCqqWdgKu4vuAfmlNAUk&callback=initMap"></script>
+
     <script type="text/javascript">
-    function initMap() {
-        new google.maps.Map(document.getElementById('map'), {
-            center: {lat: {{airport.lat}}, lng: {{airport.lng}}},
-            zoom: 16
-          });
-    }
+    function initMap(){
+        var myLatLng = {lat: {{destination[0].lat}}, lng: {{destination[0].lng}}};
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 5,
+          center: myLatLng
+        });
+
+        var marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: '{{airport.name}}'
+        });
+
+
+
+
+      };
     </script>
+
   <h1> Look for your travel destination! </h1>
   <p> Select one of our starting points and end with an airport </p>
   <body onload="initMap()">
     <div class = "container">
-      <h1>{{airport.name}}</h1>
+      <h1>{{destination[0].name}}</h1>
       <div id="map" style="width:100%; height:900px;"></div>
 </div>
 </body>
