--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <div class="container">
       <h1>Choose an Airport</h1>
       {% for airport in airports %}
-      <p><button href="{{airport.key}}" class="btn btn-primary" role="button">{{airport.name}}</button></p>
+      <p><a href="/search/{{airport.key}}" class="btn btn-primary" role="button">{{airport.name}}</a></p>
       {% endfor %}
 </div>
 </body>
