--- a/templates/test.html
+++ b/templates/test.html
@@ -5,42 +5,43 @@
       <div id="map" style="width:100%; height:600px;"></div>
 
       <script type="text/javascript">
-        var locations = [
-          ['Stadtbibliothek Zanklhof', 47.06976, 15.43154, 1],
-          ['Stadtbibliothek dieMediathek', 47.06975, 15.43116, 2],
-          ['Stadtbibliothek Gösting', 47.09399, 15.40548, 3],
-          ['Stadtbibliothek Graz West', 47.06993, 15.40727, 4],
-          ['Stadtbibliothek Graz Ost', 47.06934, 15.45888, 5],
-          ['Stadtbibliothek Graz Süd', 47.04572, 15.43234, 6],
-          ['Stadtbibliothek Graz Nord', 47.08350, 15.43212, 7],
-          ['Stadtbibliothek Andritz', 47.10280, 15.42137, 8]
-        ];
+
         function initMap(){
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 13,
+          zoom: 6,
           center: new google.maps.LatLng({{destination[0].lat}}, {{destination[0].lng}}),
 
         });
 
+        var poly = new google.maps.Polyline({
+          strokeColor: '#ff0000',
+          strokeOpacity: 2.0,
+          strokeWeight:2,
+          map: map
+        });
+
+        var path = poly.getPath();
 
         var infowindow = new google.maps.InfoWindow();
 
         var marker, i;
 
-        /*this for loop works but i cant figure out how to have our data and not something stored locally on the html page*/
-        for (i = 0; i < locations.length; i++) {
+
+        {% for airport in destination %}
           marker = new google.maps.Marker({
-            position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+            position: new google.maps.LatLng('{{airport.lat}}', '{{airport.lng}}'),
             map: map
           });
 
+          path.push(new google.maps.LatLng('{{airport.lat}}', '{{airport.lng}}'));
+
           google.maps.event.addListener(marker, 'click', (function(marker, i) {
             return function() {
-              infowindow.setContent(locations[i][0]);
+              infowindow.setContent('{{airport.name}}');
               infowindow.open(map, marker);
             }
           })(marker, i));
-        }
+        {% endfor %}
       }
       </script>
     </body>
