--- a/templates/returns.html
+++ b/templates/returns.html
@@ -5,7 +5,7 @@
   <body background="/static/travel_background.jpg">
   <form action="/" method="POST">
   <fieldset>
-    <legend><center><font color="white">Find a Flight</font></legend>
+    <legend><center><font color="white">Choose a Return Flight or add Another Flight</font></legend>
     <div id = "travelForm">
       <select name="from_id" id="from_id">
         <option value="" disabled selected>From:</option> 
