--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,13 @@
 {% extends "layout.html" %}
 {% block content %}
   <h1><center><font color = "white"> Travel Edge - Travel like a pro, on a millenial budget </font></center></h1>
-  <body background="/static/travel_background.jpg">
+  <style>
+  body{
+    background-image:url("/static/travel_background.jpg");
+    background-repeat: no-repeat;
+    background-size:100%;
+  }
+  </style>
   <form>
   <fieldset>
     <legend><center><font color="white">Find a Flight</font></legend>
