fixing portal image

--- a/templates/information.html
+++ b/templates/information.html
@@ -31,11 +31,11 @@
       <div id="grid">
       	<div class="row">
 	      	<a href="link" class = "button"><img src="/static/gimpHotel.png"></a>
-	      	<a href="link" class = "right"><img src="/static/bar.jpg"></a>
+	      	<a href="link" class = "right"><img src="/static/gimpBar.png"></a>
 	    </div>
 	    <div class="row">
-	      	<a href="link" class = "button"><img src="/static/gimpAttractions.jpg"></a>
-	      	<a href="link" class = "right"><img src="/static/gimpFood.png"></a>
+	      	<a href="link" class = "button"><img src="/static/gimpFood.png"></a>
+          <a href="link" class = "right"><img src="/static/gimpAttractions.jpg"></a>
 	      </div>
 	    </div>
     </body>
