Added low funcitoning itenerary page

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,14 +23,8 @@
     <div id="date">
       <input type="date" id="date_id" name="date_id" placeholder="mm/dd/yyyy" align = "center" required>
     </div><br><br>
-      <div id="hops">
-        <label for="hops-any"><font color="white">Any</font></label>
-        <input type="radio" name="hops" id="hops-any" value="" checked>
-        <label for="hops-nonstop"><font color="white">Nonstop Only</font></label>
-        <input type="radio" name="hops" id="hops-nonstop" value="NONSTOP">
-      </div>
-    <div><br><br>
-      <button id="lookup" class="ui-priority-primary">Search</button>
+     <p name="type" id="type" value='home'></p>
+      <b><button id="lookup" class="ui-priority-primary">Search</button></b>
     </div>
   </fieldset>
 </form>
