Pushing hotel populating information

--- a/templates/information.html
+++ b/templates/information.html
@@ -30,7 +30,7 @@
       <hr/>
       <div id="grid">
       	<div class="row">
-	      	<a href="link" class = "button"><img src="/static/gimpHotel.png"></a>
+	      	<a href="/hotel" class = "button"><img src="/static/gimpHotel.png"></a>
 	      	<a href="link" class = "right"><img src="/static/gimpBar.png"></a>
 	    </div>
 	    <div class="row">
