--- a/templates/map.html
+++ b/templates/map.html
@@ -170,5 +170,7 @@
 
         });
       </script>
+      <div id='map'></div>
+      <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWvuV9bMA9iUGNCqqWdgKu4vuAfmlNAUk&libraries=places&callback=initMap"></script>
     </body>
 {%endblock%}
