--- a/templates/return_map.html
+++ b/templates/return_map.html
@@ -17,7 +17,7 @@
    li{
     color: darkblue;
    }
-   
+
    .map_page_container{
       background: red;
       overflow: hidden;
@@ -39,7 +39,7 @@
     <center><h1><font color = "darkblue">Choose Your Return Flight </font><h1></center>
     <div id="map_page_container">
       <div id="map" style="width:100%; height:600px;"></div>
-      
+
       <div class = "filter_container">
       <article id = "filters">
         <section id="price">
@@ -96,13 +96,13 @@
           <li data-price={{flight[12]}} data-airline={{flight[13]}}> <a font size="30px" font color = "skyblue" onclick="flight_form.submit();">Add this Flight to your itenerary</a>
             <br>
             <h3 font color = "darkblue"> Airline: {{flight[5]}}</h3>
-            <p> From: {{flight[3]}} Departure Time: {{flight[4]}}</p>     
+            <p> From: {{flight[3]}} Departure Time: {{flight[4]}}</p>
             <p> To: {{flight[1]}} Arrival Time: {{flight[2]}}</p>
             <p>Flight Duration: {{flight[6]}}, stops: {{flight[10]}} </p>
-            <p><b> Price: ${{flight[11]}}</b></p> 
+            <p><b> Price: ${{flight[11]}}</b></p>
             <br>
-            <hr> 
-          </li> 
+            <hr>
+          </li>
           <br>
         </ul>
         {% endfor %}
@@ -117,7 +117,7 @@
         function initMap(){
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 6,
-          center: new google.maps.LatLng({{destination[0][0]}}, {{destination[0][0]}}),
+          center: new google.maps.LatLng({{destination[0][0]}}, {{destination[0][1]}}),
 
         });
 
@@ -167,8 +167,10 @@
               $("li").show();
             }
           });
-    
+
         });
       </script>
+      <div id='map'></div>
+      <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWvuV9bMA9iUGNCqqWdgKu4vuAfmlNAUk&libraries=places&callback=initMap"></script>
     </body>
 {%endblock%}
