--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>        
         <li><a href="/itenerary_info">Itenerary</a></li>
-        <li><a href="/search">Search</a></li>
+        <li><a href="/information">Find Things to Do</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
