--- a/templates/information.html
+++ b/templates/information.html
@@ -26,17 +26,18 @@
   }
   </style>
     <body>
-      <h1>Personalize your experience. </h1>
+      <h1><font color="darkblue"> Personalize your experience. </h1>
       <hr/>
       <div id="grid">
       	<div class="row">
-	      	<a href="link" class = "button"><img src="/static/gimpHotel.png"></a>
-	      	<a href="link" class = "right"><img src="/static/gimpBar.png"></a>
+	      	<a href="/hotel" class = "button"><img src="/static/gimpHotel.png"></a>
 	    </div>
 	    <div class="row">
-	      	<a href="link" class = "button"><img src="/static/gimpFood.png"></a>
-          <a href="link" class = "right"><img src="/static/gimpAttractions.jpg"></a>
+	      	<a href="/restaurant" class = "button"><img src="/static/gimpFood.png"></a>
+      </div>
+      <div class="row">  
+      <a href="/todo" class = "right"><img src="/static/gimpAttractions.jpg"></a>
+      </div>
 	      </div>
-	    </div>
     </body>
 {%endblock%}
